@@ -1,5 +1,6 @@
 package com.linkedin.databus2.relay;
 
+import java.io.File;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -294,7 +295,8 @@ public class MonitoringEventProducer implements EventProducer , Runnable {
 	  DataSource ds = null;
 	  try
 	  {
-		  URL ojdbcJarFile = new URL("ojdbc6.jar");
+		  File file = new File("ojdbc6-11.2.0.2.0.jar");
+		  URL ojdbcJarFile = file.toURL();
 		  URLClassLoader cl = URLClassLoader.newInstance(new URL[]{ojdbcJarFile});
 		  Class oracleDataSourceClass = cl.loadClass("oracle.jdbc.pool.OracleDataSource");
 		  Object ods = oracleDataSourceClass.newInstance(); 	  
